--- a/bin/data/jobAndGodAttributes.properties
+++ b/bin/data/jobAndGodAttributes.properties
@@ -24,7 +24,7 @@ Hunter.int=10
 Hunter.spd=4
 
 #Sage
-Sage.weapon=Pyromancy Tome
+Sage.weapon=Tome:Pyromancy
 Sage.hp=60
 Sage.str=5
 Sage.dex=10
@@ -133,7 +133,7 @@ Bow.price=10
 
 #Tome:Pyromancy
 
-Tome:Pyromancy.range=1
+Tome:Pyromancy.range=3
 Tome:Pyromancy.price=10
 
 #Scepter
