--- a/bin/data/jobAndGodAttributes.properties
+++ b/bin/data/jobAndGodAttributes.properties
@@ -24,7 +24,7 @@ Hunter.int=10
 Hunter.spd=4
 
 #Sage
-Sage.weapon=Tome:Pyromancy
+Sage.weapon=Pyromancy\u0020Tome
 Sage.hp=60
 Sage.str=5
 Sage.dex=10
@@ -133,8 +133,8 @@ Bow.price=10
 
 #Tome:Pyromancy
 
-Tome:Pyromancy.range=3
-Tome:Pyromancy.price=10
+Pyromancy\u0020Tome.range=3
+Pyromancy\u0020Tome.price=10
 
 #Scepter
 
