--- a/res/data/jobAndGodAttributes.properties
+++ b/res/data/jobAndGodAttributes.properties
@@ -123,20 +123,44 @@ Sir'Aloe.spd=0
 ###############################ITEMS###############################
 #Sword
 
-Sword.range=1
 Sword.price=10
+Sword.baseValue=5
+Sword.scaling=0.5
+Sword.range=1
+Sword.area=1
+Sword.attributeConcerned=STRENGTH
+Sword.effect=DAMAGE
+Sword.type=OFFENSE
 
 #Bow
 
-Bow.range=4
 Bow.price=10
+Bow.baseValue=5
+Bow.scaling=0.5
+Bow.range=4
+Bow.area=1
+Bow.attributeConcerned=DEXTERITY
+Bow.effect=DAMAGE
+Bow.type=OFFENSE
 
 #Tome:Pyromancy
 
-Pyromancy\u0020Tome.range=3
 Pyromancy\u0020Tome.price=10
+Pyromancy\u0020Tome.baseValue=5
+Pyromancy\u0020Tome.scaling=0.5
+Pyromancy\u0020Tome.range=3
+Pyromancy\u0020Tome.area=1
+Pyromancy\u0020Tome.attributeConcerned=INTELLIGENCE
+Pyromancy\u0020Tome.effect=DAMAGE
+Pyromancy\u0020Tome.type=OFFENSE
 
 #Scepter
 
-Scepter.range=1
 Scepter.price=10
+Scepter.baseValue=5
+Scepter.scaling=0.5
+Scepter.range=1
+Scepter.area=1
+Scepter.attributeConcerned=INTELLIGENCE
+Scepter.effect=HEAL
+Scepter.type=SUPPORT
