--- a/res/data/jobAndGodAttributes.properties
+++ b/res/data/jobAndGodAttributes.properties
@@ -6,6 +6,11 @@ Fighter.str=20
 Fighter.dex=10
 Fighter.int=0
 Fighter.spd=3
+Fighter.sprt=sprite_fighter32x64.png
+Fighter.up=figtup
+Fighter.down=figtdown
+Fighter.left=figtleft
+Fighter.right=figtright
 
 #Guardian
 Guardian.weapon=Sword
@@ -14,6 +19,11 @@ Guardian.str=15
 Guardian.dex=0
 Guardian.int=5
 Guardian.spd=2
+Guardian.sprt=sprite_guardian32x64.png
+Guardian.up=guarup
+Guardian.down=guardown
+Guardian.left=guarleft
+Guardian.right=guarright
 
 #Hunter
 Hunter.weapon=Bow
@@ -22,6 +32,11 @@ Hunter.str=5
 Hunter.dex=20
 Hunter.int=10
 Hunter.spd=4
+Hunter.sprt=sprite_hunter32x64.png
+Hunter.up=huntup
+Hunter.down=huntdown
+Hunter.left=huntleft
+Hunter.right=huntright
 
 #Sage
 Sage.weapon=Pyromancy\u0020Tome
@@ -30,6 +45,11 @@ Sage.str=5
 Sage.dex=10
 Sage.int=20
 Sage.spd=3
+Sage.sprt=sprite_sage32x64.png
+Sage.up=sageup
+Sage.down=sagedown
+Sage.left=sageleft
+Sage.right=sageright
 
 #Cleric
 Cleric.weapon=Scepter
@@ -38,6 +58,11 @@ Cleric.str=10
 Cleric.dex=10
 Cleric.int=15
 Cleric.spd=3
+Cleric.sprt=sprite_cleric32x64.png
+Cleric.up=clerup
+Cleric.down=clerdown
+Cleric.left=clerleft
+Cleric.right=clerright
 
 ###############################GODS###############################
 #Ross'Fert
